--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "homepage": "http://mirman1.github.io/Personal_Website",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "save-dev": "0.0.1-security"
   },
   "scripts": {
     "predeploy": "npm run build",
